# fortran-sleep

./: CMakeLists.txt  README.md  fpm.toml
.github/workflows/: ci_cmake.yml
app/: bind.f90  main.f90
cmake/: compilers.cmake  options.cmake
reference/: posix.f90  windows.f90
src/: csleep.h  sleep.c  sleep.cpp  sleep_std.f90
src/c_fortran/: sleep.c
src/fortran/: posix.f90
